--- a/fillPaintMaster/InfoPlist.strings
+++ b/fillPaintMaster/InfoPlist.strings
@@ -6,4 +6,4 @@ Created by apple on 15/9/13.
 Copyright © 2015年 songqi. All rights reserved.
 */
 
-"CFBundleDisplayName" = "补漆大师";
+"CFBundleDisplayName" = "客乐养车坊";
